// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`svelte/UILink renders correctly - basic 1`] = `
<div>
  <a
    class="ui-title ui-title--large"
    href="https://test.com"
  >
    Test
  </a>
</div>
`;

exports[`svelte/UILink renders correctly - with id 1`] = `
<div>
  <a
    class="ui-title"
    href="https://test.com"
    id="test"
  >
    Test
  </a>
</div>
`;

exports[`svelte/UILink renders correctly - with rel 1`] = `
<div>
  <a
    class="ui-title"
    href="https://test.com"
    rel="no referrer"
  >
    Test
  </a>
</div>
`;

exports[`svelte/UILink renders correctly - with target 1`] = `
<div>
  <a
    class="ui-title"
    href="https://test.com"
    target="_blank"
  >
    Test
  </a>
</div>
`;

exports[`svelte/UILink renders correctly - with title 1`] = `
<div>
  <a
    class="ui-title"
    href="https://test.com"
    title="test"
  >
    Test
  </a>
</div>
`;
